[package]
name = "turbo-cli"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
turbo-proto = { path = "../turbo-proto" }
tokio = { version = "0.2.23", features = [ "macros" ] }
structopt = "0.3.20"
hex = "0.4.2"

[[bin]]
name = "turbo"
path = "src/main.rs"
