[package]
name = "turbo-cli"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.11.0"
ethereum-interfaces = { git = "https://github.com/rust-ethereum/interfaces" }
tonic = "0.4.0"
tokio = { version = "1.0.1", features = [ "macros" ] }
structopt = "0.3.20"
hex = "0.4.2"

[[bin]]
name = "turbo"
path = "src/main.rs"
