[package]
name = "turbo-txpool"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo-proto = { path = "../turbo-proto" }
tokio = { version = "0.2.23", features = [ "sync" ] }
ethereum-types = "0.9.2"
slab = "0.4.2"
rlp = "0.4.6"
snafu = "0.6.9"
tiny-keccak = "2.0.2"
typed-builder = "0.7.1"
