[package]
name = "turbo-txpool"
version = "0.1.0"
authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
arbitrary = ["arbitrary-dep", "ethereum-types/arbitrary"]

[dependencies]
turbo-proto = { path = "../turbo-proto" }
tokio = { version = "0.2.23", features = [ "sync", "macros" ] }
tonic = { version = "0.3.1", features = ["transport"] }
ethereum-types = "0.9.2"
slab = "0.4.2"
rlp = "0.4.6"
snafu = "0.6.9"
tiny-keccak = "2.0.2"
typed-builder = "0.7.1"
k256 = { version = "0.6.0", features = [ "ecdsa", "ecdsa-core", "keccak256", "std" ] }
signature = { version = "1.2.2", default-features = false, features = [ "std" ] }
async-trait = "0.1.42"
futures-core = "0.3.9"
futures-util = "0.3.9"

[dependencies.arbitrary-dep]
package ="arbitrary"
version = "0.4.7"
optional = true
features = [ "derive" ]

[dev-dependencies]
hex-literal = "0.3.1"
